# INF329A

./: .gitignore  CMakeLists.txt  TODO.md  basic_ops.cpp  basic_ops.h  compile_commands.json  drop.cpp  drop.h  elem.cpp  elem.h  filter.cpp  filter.h  get.h  head.cpp  head.h  list.cpp  list.h  list_con.cpp  list_con.h  list_red.cpp  list_red.h  list_search.cpp  list_search.h  list_sort.cpp  list_sort.h  list_trans.cpp  list_trans.h  main.cpp  map.cpp  map.h  splitAt.cpp  splitAt.h  tail.cpp  tail.h  take.cpp  take.h
.cache/clangd/index/: main.cpp.660E716DCE7884E9.idx
conv/: list_con.cpp  list_con.h
div_1/: div.h  div2.h  div_test.cpp
list_ops/: list_ops.cpp  list_ops.h
scans/: scans.cpp  scans.h
search/: searchl.cpp  searchl.h
sfolds/: sfolds.cpp  sfolds.h
subl/: subl.cpp  subl.h
zipping/: zip.cpp  zip.h
